add city name parse

--- a/pom.xml
+++ b/pom.xml
@@ -54,10 +54,6 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${compiler.version}</version>
@@ -70,6 +66,9 @@
     </build>
 
     <distributionManagement>
-
+        <repository>
+            <id>github-mvn-repo</id>
+            <url>file:///D:/git/maven-repository/</url>
+        </repository>
     </distributionManagement>
 </project>
